<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_principal"
            android:checked="true"
            android:icon="@drawable/ic_home"
            android:title="@string/principal_item" />
        <item
            android:id="@+id/nav_calculadora"
            android:icon="@drawable/ic_attach_money"
            android:title="@string/calculadora_item" />
        <item
            android:id="@+id/nav_plantilla"
            android:icon="@drawable/ic_content_copy"
            android:title="@string/plantillas_item" />
        <item
            android:id="@+id/nav_estadisticas"
            android:icon="@drawable/ic_poll"
            android:title="@string/estadisticas_item" />


        <item
            android:id="@+id/configuration_section"
            android:title="@string/configuracion_item">

        </item>
    </group>

</menu>