<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="#ffffff">


    <TextView
        android:layout_width="wrap_content"
        android:padding="5dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/dialog_calculadora_titulo_string"
        android:id="@+id/dialog_calculadora_titulo_id"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:padding="5dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/dialog_calculadora_mensaje_string"
        android:id="@+id/dialog_calculadora_mensaje_id"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_calculadora_btn_string"
        android:background="@color/primaryColor"
        android:textColor="#ffffff"
        android:id="@+id/dialog_calculadora_btn_id"
        android:layout_gravity="center_horizontal" />
</LinearLayout>


